messagboard is about done, need to make dynamic routes based on topic title

--- a/public/admin.html
+++ b/public/admin.html
@@ -50,7 +50,7 @@
     </div>
 
     <div class="addItemDiv">
-        <form class='addForm' action="/additem" method="POST">
+        <form class='addForm' action="grocery/additem" method="POST">
         <div class="formDiv">
             <label for="name">Name:</label>
             <input type="text" name="name" id="name" placeholder="name..." autocomplete="off">
